--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "cookies-next": "^4.3.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
