--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
     "cookies-next": "^4.3.0",
+    "firebase": "^11.0.1",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
