--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "cookies-next": "^4.3.0",
     "firebase": "^11.0.1",
+    "framer-motion": "^11.11.10",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
